# rtc-quickdemo-qt

./: CMakeLists.txt  README.md  live.cpp  live.h  live.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meeting.cpp  meeting.h  meeting.ui  mix_streams_layout.cpp  mix_streams_layout.h  rcrtc_listener_impl.cpp  rcrtc_listener_impl.h  remoteuserui.cpp  remoteuserui.h  remoteuserui.ui  rtc_constants.h  rtc_live_model.cpp  rtc_live_model.h  rtc_live_model.ui  rtc_meeting_model.cpp  rtc_meeting_model.h  rtc_meeting_model.ui  rtc_video_render.cpp  rtc_video_render.h  rtc_video_render.ui  utility.cpp  utility.h
sdk/include/: libc_basetypes.h  libc_common.h
sdk/include/im/: libc_basetypes.h  libc_common.h  rcim.h  rcim_basetypes.h  rcim_callback.h  rcim_chatroom.h  rcim_client.h  rcim_common.h  rcim_constants.h  rcim_structure.h
sdk/include/rtc/: libc_audio_mixer_channel.h  libc_audio_pcm.h  libc_audio_pcm_mic_in.h  libc_device_audio.h  libc_device_screen_capture.h  libc_device_video_capture.h  libc_engine.h  libc_local_user.h  libc_rcrtc.h  libc_remote_user.h  libc_rtc_types.h  libc_stream.h  libc_video_codec_extern.h  libc_video_image_capturer.h  libc_video_image_default_capturer.h  libc_video_image_render.h  rcrtc_common.h  rcrtc_config.h  rcrtc_constants.h  rcrtc_device.h  rcrtc_engine.h  rcrtc_listener.h  rcrtc_room_setup.h  rcrtc_setup.h  rcrtc_view_interface.h
sdk/lib/win/x64/: rongcommon.dll.lib  rongim.dll.lib  ronglog.dll.lib  rongrtc.dll.lib
sdk/lib/win/x86/: rongcommon.dll.lib  rongim.dll.lib  ronglog.dll.lib  rongrtc.dll.lib
